--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
 	font-size:9px;font-weight:bold;
 	margin:0 0 0 6px;color:#333;
 	height:1em;
+	padding:0px;
 }
 #wpss_survey label#amount { 
 	float:right; 
@@ -45,6 +46,7 @@
 	font-size:9px;font-weight:bold;
 	margin:2px 5px 0 0;color:#333; 
 	height:1em;
+	padding:0px;
 }
 
 /* Question */
