M    trunk/style.css M    trunk/quiz_submit.php A    trunk/images AM   trunk/images/white.png AM   trunk/images/wpss_info.png M    trunk/admin_page.php M    trunk/simple-survey.php M    trunk/readme.txt
git-svn-id: https://plugins.svn.wordpress.org/wordpress-simple-survey/trunk@292125 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -122,8 +122,6 @@
 	float:right;
 }
 
-
-
 /*-------------------Results Page-----------------------------*/
 #wpss_results{
 	text-decoration: none;
@@ -160,8 +158,20 @@
 	border-top-right-radius: 4px 4px;
 	border-top-right-radius: 4px 4px;
 }
-#wpss_options input{
-/*	float:right;*/
+
+.wpss_options .wpss_info{
+	vertical-align:middle;
+	border:none;
+}
+
+.tooltip {
+	display:none;
+	background:transparent url(images/white.png) no-repeat 0 0;
+	font-size:12px;
+	height:80px;
+	width:170px;
+	padding:20px;
+	color:black;	
 }
 
 #wpss_results ol, #wpss_results ul {
@@ -174,6 +184,7 @@
 	content: '';
 	content: none;
 }
+
 
 /* remember to define focus styles! */
 #wpss_results  :focus {
