--- a/style.css
+++ b/style.css
@@ -687,3 +687,20 @@ input.wpss_clear_results{
   margin-top:10px;
 }
 
+/*  Global options page
+------------------------------------------------*/
+#wpss_togglejquery{
+  border:1px #DFDFDF solid;
+  padding-left:10px;
+  padding-right:10px;  
+  width:60%;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  
+  background: #ffffff; /* old browsers */
+  background: -moz-linear-gradient(top, #ffffff 0%, #e5e5e5 100%); /* firefox */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e5e5e5)); /* webkit */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* ie */
+  background: -o-linear-gradient(top, #ffffff 0%,#e5e5e5 100%); /* opera */
+}
+
