Update admin table styles.
git-svn-id: https://plugins.svn.wordpress.org/wordpress-simple-survey/trunk@509952 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -228,6 +228,9 @@ ul#quiz_tabs li.current a{
 }
 table#wpss_admin_table{
   width:100%;
+  border-collapse:collapse;
+  border: 1px solid #DFDFDF;
+  border:0;
 }
 table#wpss_admin_table h2{
   font-size:17px;
